objects/vlocity_cmt__DocuSignEnvelopeObjectSetting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>vlocity_cmt__DocParentIdField__c</fullName>
        <description>Parent Id for document attachment.</description>
        <label>Document Parent Id Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EnvelopeObjectName__c</fullName>
        <label>Envelope Object Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ParentObjectIdField__c</fullName>
        <description>Parent Object Id field in Envelope Object.</description>
        <label>Parent Object Id Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RecipientObjectName__c</fullName>
        <label>Recipient Object Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>DocuSign Envelope Object Setting</label>
</CustomObject>